syntax = "proto3";

option java_package = "com.example.shared";
option java_outer_classname = "CommonProto";

message StatusMessage {
  bool success = 1;
  string mensaje = 2;
  optional int64 id = 3;
}
